Add basic hall endpoints
